# base-git-verify-model

./: README.md  pyproject.toml
src/gitverify/: __main__.py  art.py  auth.py  base.py  checks.py  cli.py  github.py  history.py  score.py  service.py
